--- a/app/src/main/res/layout/activity_home_cycle.xml
+++ b/app/src/main/res/layout/activity_home_cycle.xml
@@ -1,6 +1,128 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-</android.support.constraint.ConstraintLayout>
+    <include layout="@layout/toolbar" />
+
+    <FrameLayout
+        android:id="@+id/home_cycle_activity_fl_home_frame"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1" />
+
+    <RadioGroup
+        android:id="@+id/home_cycle_activity_rg_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dim_40dp"
+        android:background="@color/navigation_color"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/home_cycle_activity_iv_home"
+                style="@style/bottom_navigation_select"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dim_4dp"
+                android:visibility="visible" />
+
+            <RadioButton
+                android:id="@+id/home_cycle_activity_rb_home"
+                style="@style/bottom_navigation"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:drawableTop="@drawable/ic_home_nav" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/home_cycle_activity_iv_profile"
+                style="@style/bottom_navigation_select"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dim_4dp" />
+
+            <RadioButton
+                android:id="@+id/home_cycle_activity_rb_profile"
+                style="@style/bottom_navigation"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:drawableTop="@drawable/ic_user_nav" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/home_cycle_activity_iv_notification"
+                style="@style/bottom_navigation_select"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dim_4dp" />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+
+                <RadioButton
+                    android:id="@+id/home_cycle_activity_rb_notification"
+                    style="@style/bottom_navigation"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:drawableTop="@drawable/ic_notifications_nav" />
+
+                <TextView
+                    android:id="@+id/home_cycle_activity_tv_notification_count"
+                    android:layout_width="@dimen/dim_14dp"
+                    android:layout_height="@dimen/dim_14dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginEnd="@dimen/dim_notification_space"
+                    android:background="@drawable/shape_notification_count"
+                    android:gravity="center"
+                    android:textColor="@color/txt_color2"
+                    android:textSize="@dimen/txt_10sp"
+                    android:visibility="gone" />
+
+            </RelativeLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/home_cycle_activity_iv_more"
+                style="@style/bottom_navigation_select"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dim_4dp" />
+
+            <RadioButton
+                android:id="@+id/home_cycle_activity_rb_more"
+                style="@style/bottom_navigation"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:drawableTop="@drawable/ic_more_nav" />
+
+        </LinearLayout>
+
+    </RadioGroup>
+
+</LinearLayout>
