--- a/app/src/main/res/layout/fragment_home_container.xml
+++ b/app/src/main/res/layout/fragment_home_container.xml
@@ -1,6 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-</android.support.constraint.ConstraintLayout>
+    <android.support.design.widget.TabLayout
+        android:id="@+id/home_container_fragment_tl_tab"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <com.reda.yehia.bloodbankv2.utils.CustomViewPager
+        android:id="@+id/home_container_fragment_vp_view_pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+    <FrameLayout
+        android:id="@+id/home_container_fragment_fl_frame"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"/>
+
+</LinearLayout>
