--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/login_fragment_rl_sub_view"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/login">
@@ -11,6 +11,7 @@
         android:fillViewport="true">
 
         <RelativeLayout
+            android:id="@+id/login_fragment_rl_sub_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -28,7 +29,8 @@
                 style="@style/text_input"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_centerInParent="true">
+                android:layout_centerInParent="true"
+                app:errorTextAppearance="@style/error_appearance">
 
                 <android.support.design.widget.TextInputEditText
                     style="@style/text_input_edit"
@@ -45,14 +47,14 @@
                 style="@style/text_input"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/login_fragment_til_phone">
+                android:layout_below="@id/login_fragment_til_phone"
+                app:errorTextAppearance="@style/error_appearance">
 
                 <android.support.design.widget.TextInputEditText
                     style="@style/text_input_edit"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/password"
-                    android:inputType="textPassword" />
+                    android:hint="@string/password" />
 
             </android.support.design.widget.TextInputLayout>
 
