--- a/app/src/main/res/layout/item_donation.xml
+++ b/app/src/main/res/layout/item_donation.xml
@@ -6,14 +6,15 @@
     android:layout_height="wrap_content"
     android:layout_marginEnd="@dimen/dim_4dp"
     android:layout_marginStart="@dimen/dim_4dp"
-    android:layout_marginTop="@dimen/dim_4dp"
+    android:layout_marginTop="@dimen/dim_2dp"
     android:background="@null"
     app:dragEdge="left"
     app:mode="same_level">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="@dimen/dim_100dp"
         android:layout_height="@dimen/dim_100dp"
+        android:layout_margin="@dimen/dim_8dp"
         android:gravity="center"
         android:orientation="horizontal">
 
@@ -21,13 +22,16 @@
             android:id="@+id/donation_adapter_tv_info"
             android:layout_width="@dimen/dim_40dp"
             android:layout_height="@dimen/dim_40dp"
+            android:layout_margin="@dimen/dim_8dp"
             android:background="@drawable/shape_circil" />
 
         <ImageButton
             android:id="@+id/donation_adapter_tv_call"
             android:layout_width="@dimen/dim_40dp"
             android:layout_height="@dimen/dim_40dp"
+            android:layout_margin="@dimen/dim_8dp"
             android:background="@drawable/shape_circil" />
+
     </LinearLayout>
 
     <RelativeLayout
@@ -39,7 +43,7 @@
             android:layout_height="@dimen/dim_100dp"
             android:layout_centerVertical="true"
             android:layout_marginBottom="@dimen/dim_8dp"
-            android:layout_marginStart="-50dp"
+            android:layout_marginStart="@dimen/dim_n_50dp"
             android:layout_toEndOf="@id/donation_adapter_tv_blood_type"
             android:background="@drawable/shape_donation"
             android:gravity="center"
